# HMI-cmd

./: .gitignore  CMakeLists.txt  INSTALL.md
asaCoder/: asaEncoder.cpp  asaEncoder.h  asaFile.cpp  asaFile.h  asaFormat.h  serialPort.cpp  serialPort.h
cmd/: CMakeLists.txt  HMI.cpp  HMI.h  cmdAgent.cpp  window.cpp  window.h
test/: CMakeLists.txt  getHello.cpp  hello.cpp  putArray.cpp  resizeWin.cpp  serial2win.cpp  sngetArray.cpp  windowBox.cpp
test_txt/: i8_5.txt
